# hexapods

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h  const.h  hexopods.cpp
stl/: README.md  chassis.stl  hip.stl  shoulder.stl  spine.stl  tray.stl
